@@ -31,6 +31,27 @@ git clone https://github.com/F0zzi4/TrackTune.git
 cd TrackTune
 ```
 
+---
+
+## 🔧 Deployment
+```
+mvn clean package // from the root directory ..\TrackTune\
+java --module-path "C:\JavaFX\javafx-sdk-21.0.7\lib" --add-modules javafx.controls,javafx.fxml -jar TrackTune-1.0.0.0.jar
+jpackage ^
+--input "C:/Users/ACER/IdeaProjects/TrackTune/target" ^
+--name "TrackTune" ^
+--main-jar "tracktune-1.0.0.0-jar-with-dependencies.jar" ^
+--main-class "app.tracktune.Main" ^
+--type exe ^
+--icon "C:/Users/ACER/IdeaProjects/TrackTune/src/resources/assets/icon/appIcon.ico" ^
+--runtime-image "custom-javafx-runtime" ^
+--win-menu ^
+--win-shortcut ^
+--win-dir-chooser ^
+--app-version "1.0.0" ^
+--vendor "TrackTune Team"
+
+```
 
 ## 👤 Author
 [![GitHub](https://img.shields.io/badge/GitHub-@F0zzi4-181717?logo=github)](https://github.com/F0zzi4)
